--- a/tests/Euclid.Composite.MvcApplication/Content/euclid-default-styles.css
+++ b/tests/Euclid.Composite.MvcApplication/Content/euclid-default-styles.css
@@ -22,3 +22,28 @@
 .agent-name
 {
 }
+
+.metadata-links-list
+{
+    list-style: none;
+}
+
+#link-container ul li:before
+{
+    content: "\00BB \0020";
+}
+
+.metadata-links-container
+{
+    
+}
+
+.metadata-link-item
+{
+    
+}
+
+.metadata-link
+{
+    
+}
