--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/Index.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/Index.cshtml
@@ -14,3 +14,5 @@
         </li>
     }
 </ul>
+
+@{ Html.RenderPartial("MetadataLinks", new MetadataLinkModel { AgentSytemName = null, PartType = null }); }
