--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/InspectCommand.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/InspectCommand.cshtml
@@ -1,5 +1,5 @@
-@using Euclid.Framework.Models
-@model IInputModel
+@using Euclid.Composite.MvcApplication.Models
+@model Euclid.Framework.Models.IInputModel
 
 <h1>@ViewBag.Title</h1>
 
@@ -15,6 +15,4 @@
 	<input type="submit" value="Publish Command" />
 }
 
-<a href="@Url.Action("Parts", "Agents", new {agentSystemName = Model.AgentSystemName, partType = "Commands"})">Commands in @Model.AgentSystemName</a>
-<br/>
-<a href="@Url.Action("Index")">Agents in composite</a>
+@{ Html.RenderPartial("MetadataLinks", new MetadataLinkModel {AgentSytemName = Model.AgentSystemName, PartType = "Commands"}); }
