switched tests to sql server; dispatcher resolves publication registries on-demand; formatting elsewhere

--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/InspectCommand.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/InspectCommand.cshtml
@@ -1,5 +1,6 @@
 @using Euclid.Composite.MvcApplication.Models
-@model Euclid.Framework.Models.IInputModel
+@using Euclid.Framework.Models
+@model IInputModel
 
 <h1>@ViewBag.Title</h1>
 
