finished initial version of metadata service

--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/Index.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/Index.cshtml
@@ -15,4 +15,4 @@
     }
 </ul>
 
-@{ Html.RenderPartial("MetadataLinks", new MetadataLinkModel { AgentSytemName = null, PartType = null }); }
+@{ Html.RenderPartial("MetadataLinks", Model); }
