--- a/tests/Euclid.Composite.MvcApplication/Views/Shared/DisplayTemplates/IAgentPart.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Shared/DisplayTemplates/IAgentPart.cshtml
@@ -2,18 +2,18 @@
 @model AgentPartModel
 
 
-@Model.PartType
-        (<a href="@Url.Action("Parts", "Agents", new { agentSystemName = @Model.AgentSystemName, partType = @Model.PartType })">html</a> |
-        <a href="@Url.Action("Parts", "Agents", new { agentSystemName = @Model.AgentSystemName, partType = @Model.PartType, format = "xml" })">xml</a> |
-        <a href="@Url.Action("Parts", "Agents", new { agentSystemName = @Model.AgentSystemName, partType = @Model.PartType, format = "json" })">json</a>)
+@Model.Part.DescriptiveName
+        (<a href="@Url.Action("ViewPartCollection", "Agents", new { agentSystemName = @Model.AgentSystemName, descriptiveName = @Model.Part.DescriptiveName })">html</a> |
+        <a href="@Url.Action("ViewPartCollection", "Agents", new { agentSystemName = @Model.AgentSystemName, descriptiveName = @Model.Part.DescriptiveName, format = "xml" })">xml</a> |
+        <a href="@Url.Action("ViewPartCollection", "Agents", new { agentSystemName = @Model.AgentSystemName, descriptiveName = @Model.Part.DescriptiveName, format = "json" })">json</a>)
 <ul>
-@foreach(var p in @Model.PartMetadataFormatter)
+@foreach(var p in @Model.Part.Collection)
 {
-	<li id="@Model.AgentSystemName-@Model.PartType.ToLower()">
+	<li id="@Model.AgentSystemName-@Model.Part.CollectionType.Name.ToLower()">
         @p.Namespace.@p.Name
-        (<a href="@Url.Action(@Model.NextAction, "Agents", new { agentSystemName = @Model.AgentSystemName, partType = @Model.PartType, partName = p.Name })">html</a> |
-        <a href="@Url.Action(@Model.NextAction, "Agents", new { agentSystemName = @Model.AgentSystemName, partType = @Model.PartType, partName = p.Name, format = "xml" })">xml</a> |
-        <a href="@Url.Action(@Model.NextAction, "Agents", new { agentSystemName = @Model.AgentSystemName, partType = @Model.PartType, partName = p.Name, format = "json" })">json</a>)
+        (<a href="@Url.Action(@Model.NextAction, "Agents", new { agentSystemName = @Model.AgentSystemName, partName = p.Name })">html</a> |
+        <a href="@Url.Action(@Model.NextAction, "Agents", new { agentSystemName = @Model.AgentSystemName, partName = p.Name, format = "xml" })">xml</a> |
+        <a href="@Url.Action(@Model.NextAction, "Agents", new { agentSystemName = @Model.AgentSystemName, partName = p.Name, format = "json" })">json</a>)
 
     </li>
 }
