fix merge issues

--- a/tests/Euclid.Composite.MvcApplication/Views/Shared/MetadataLinks.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Shared/MetadataLinks.cshtml
@@ -1,6 +1,5 @@
-
-d:\Projects\Euclid\platform>@git.exe %*
 ﻿@using Euclid.Composite.MvcApplication.Models
+@using Euclid.Composite.MvcApplication.Models
 @model FooterLinkModel
 
 <div class="metadata-links-container" id="link-container">
@@ -22,9 +21,3 @@ d:\Projects\Euclid\platform>@git.exe %*
         <li class="metadata-link-item"><a class="metadata-link" href="@Url.Action("Index", "Agents")">Agents in composite</a></li>
     </ul>
 </div>
-
-d:\Projects\Euclid\platform>@set ErrorLevel=%ErrorLevel%
-
-d:\Projects\Euclid\platform>@rem Restore the original console codepage.
-
-d:\Projects\Euclid\platform>@chcp %cp_oem% > nul < nul
