--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/Index.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/Index.cshtml
@@ -1,6 +1,4 @@
-
-d:\Projects\Euclid\platform>@git.exe %*
-﻿@using Euclid.Composite.MvcApplication.Models
+@using Euclid.Composite.MvcApplication.Models
 @model AgentListModel
 
 <h1>@ViewBag.Title</h1>
@@ -18,8 +16,3 @@ d:\Projects\Euclid\platform>@git.exe %*
 </ul>
 
 @{ Html.RenderPartial("MetadataLinks", Model); }
-d:\Projects\Euclid\platform>@set ErrorLevel=%ErrorLevel%
-
-d:\Projects\Euclid\platform>@rem Restore the original console codepage.
-
-d:\Projects\Euclid\platform>@chcp %cp_oem% > nul < nul
