--- a/tests/Euclid.Composite.MvcApplication/Views/Agents/ViewPart.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Agents/ViewPart.cshtml
@@ -1,6 +1,4 @@
-
-d:\Projects\Euclid\platform>@git.exe %*
-﻿@using System.Text
+@using System.Text
 @using Euclid.Composite.MvcApplication.Models
 @model PartModel
 
@@ -48,10 +46,3 @@ d:\Projects\Euclid\platform>@git.exe %*
 }
 
 @{ Html.RenderPartial("MetadataLinks", Model); }
-
-
-d:\Projects\Euclid\platform>@set ErrorLevel=%ErrorLevel%
-
-d:\Projects\Euclid\platform>@rem Restore the original console codepage.
-
-d:\Projects\Euclid\platform>@chcp %cp_oem% > nul < nul
