--- a/tests/Euclid.Composite.MvcApplication/Views/Shared/DisplayTemplates/IAgentPart.cshtml
+++ b/tests/Euclid.Composite.MvcApplication/Views/Shared/DisplayTemplates/IAgentPart.cshtml
@@ -1,6 +1,4 @@
-
-d:\Projects\Euclid\platform>@git.exe %*
-﻿@using Euclid.Composite.MvcApplication.Models
+@using Euclid.Composite.MvcApplication.Models
 @model AgentPartModel
 
 
@@ -20,9 +18,3 @@ d:\Projects\Euclid\platform>@git.exe %*
     </li>
 }
 </ul>
-
-d:\Projects\Euclid\platform>@set ErrorLevel=%ErrorLevel%
-
-d:\Projects\Euclid\platform>@rem Restore the original console codepage.
-
-d:\Projects\Euclid\platform>@chcp %cp_oem% > nul < nul
