--- a/src/sdk/MetadataComposite/Areas/Metadata/ViewsShared/MetadataLinks.cshtml
+++ b/src/sdk/MetadataComposite/Areas/Metadata/ViewsShared/MetadataLinks.cshtml
@@ -1,4 +1,6 @@
-﻿@using MetadataComposite.Areas.Metadata.Models
+﻿@using Euclid.Composite.MvcApplication.Models
+@using Euclid.Composite.MvcApplication.Models
+@using MetadataComposite.Areas.Metadata.Models
 @model FooterLinkModel
 
 <div class="metadata-links-container" id="link-container">
@@ -6,7 +8,7 @@
         @if (!string.IsNullOrEmpty(Model.AgentSytemName) && !string.IsNullOrEmpty(Model.PartType))
         {
             <li class="metadata-link-item">
-                <a class="metadata-link" href="@Url.Action("ViewPartCollection", "Agents", new {AgentSystemName = Model.AgentSytemName, PartName = Model.PartType})">
+                <a class="metadata-link" href="@Url.Action("ViewPartCollection", "Agents", new { AgentSystemName = Model.AgentSytemName, PartName = Model.PartType})">
                     @Model.AgentSytemName's @Model.PartDescriptiveName
                 </a>
             </li>
@@ -14,7 +16,7 @@
 
         @if (!string.IsNullOrEmpty(Model.AgentSytemName))
         {
-            <li class="metadata-link-item"><a class="metadata-link" href="@Url.Action("ViewAgent", "Agents", new {AgentSystemName = Model.AgentSytemName,})">@Model.AgentSytemName details</a></li>
+            <li class="metadata-link-item"><a class="metadata-link" href="@Url.Action("ViewAgent", "Agents", new { AgentSystemName = Model.AgentSytemName, })">@Model.AgentSytemName details</a></li>
         }
 
         <li class="metadata-link-item"><a class="metadata-link" href="@Url.Action("Index", "Agents")">Agents in composite</a></li>
