--- a/src/sdk/MetadataComposite/Areas/Metadata/Views/Agents/ViewPartCollection.cshtml
+++ b/src/sdk/MetadataComposite/Areas/Metadata/Views/Agents/ViewPartCollection.cshtml
@@ -1,21 +1,20 @@
-﻿@using Euclid.Composite.MvcApplication.Models
-@using MetadataComposite.Areas.Metadata.Models
+﻿@using MetadataComposite.Areas.Metadata.Models
 @model PartCollectionModel
 
 <h1>@ViewBag.Title</h1>
 
 <ul>
-	@foreach (var part in Model.Parts.Collection)
-	{
-		<li>
-        @part.Namespace.@part.Name
-        (
-            <a href="@Url.Action(@Model.NextActionName, "Agents", new { agentSystemName = Model.Parts.AgentSystemName, partName = part.Name })">html</a> | 
-            <a href="@Url.Action(@Model.NextActionName, "Agents", new { agentSystemName = Model.Parts.AgentSystemName, partName = part.Name, format="xml" })">xml</a> |
-            <a href="@Url.Action(@Model.NextActionName, "Agents", new { agentSystemName = Model.Parts.AgentSystemName, partName = part.Name, format="json" })">json</a>)
+    @foreach (var part in Model.Parts.Collection)
+    {
+        <li>
+            @part.Namespace.@part.Name
+            (
+            <a href="@Url.Action(@Model.NextActionName, "Agents", new {agentSystemName = Model.Parts.AgentSystemName, partName = part.Name})">html</a> | 
+            <a href="@Url.Action(@Model.NextActionName, "Agents", new {agentSystemName = Model.Parts.AgentSystemName, partName = part.Name, format = "xml"})">xml</a> |
+            <a href="@Url.Action(@Model.NextActionName, "Agents", new {agentSystemName = Model.Parts.AgentSystemName, partName = part.Name, format = "json"})">json</a>)
 			
-		</li>
-	}
+        </li>
+    }
 </ul>
 
 @{ Html.RenderPartial("MetadataLinks", Model); }
