--- a/src/sdk/MetadataComposite/Areas/Metadata/Views/Shared/_Layout.cshtml
+++ b/src/sdk/MetadataComposite/Areas/Metadata/Views/Shared/_Layout.cshtml
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>@ViewBag.Title</title>
-        <link href="@Url.Content("~/Content/euclid-default-styles.css")" rel="stylesheet" type="text/css"/>
-        <script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"> </script>
-        <script src="@Url.Content("~/Scripts/jquery.validate.js")" type="text/javascript"> </script>
-        <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"> </script>
-        <script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"> </script>
+        <link href="@Url.Content("~/Areas/Metadata/Content/euclid-default-styles.css")" rel="stylesheet" type="text/css"/>
+        <script src="@Url.Content("~/Areas/Metadata/Scripts/jquery-1.6.2.min.js")" type="text/javascript"> </script>
+        <script src="@Url.Content("~/Areas/Metadata/Scripts/jquery.validate.js")" type="text/javascript"> </script>
+        <script src="@Url.Content("~/Areas/Metadata/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"> </script>
+        <script src="@Url.Content("~/Areas/Metadata/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"> </script>
     </head>
 
     <body>
