format checkpoint; we need to figure out how to exclude *.feature.cs files from this. it isn't harmful but it's a waste of time to format them

--- a/tests/Euclid.Sdk.NugetTests/Areas/Metadata/Content/Command/List.cshtml
+++ b/tests/Euclid.Sdk.NugetTests/Areas/Metadata/Content/Command/List.cshtml
@@ -1,5 +1,4 @@
-﻿@using Euclid.Composite.MvcApplication.Models
-@model CommandMetadataModel
+﻿@model CommandMetadataModel
 
 <div class="model-header">@ViewBag.Title</div>
 
