--- a/tests/Euclid.Sdk.NugetTests/Areas/Metadata/Models/Command/List.cshtml
+++ b/tests/Euclid.Sdk.NugetTests/Areas/Metadata/Models/Command/List.cshtml
@@ -1,5 +1,4 @@
-﻿@using Euclid.Composite.MvcApplication.Models
-@model CommandMetadataModel
+﻿@model CommandMetadataModel
 
 <div class="model-header">@ViewBag.Title</div>
 
