--- a/src/sdk/AgentPanel/Areas/Metadata/Views/Agents/ViewInputModelForCommand.cshtml
+++ b/src/sdk/AgentPanel/Areas/Metadata/Views/Agents/ViewInputModelForCommand.cshtml
@@ -4,7 +4,7 @@
 
 <h1>@ViewBag.Title</h1>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Publish", "Agents", FormMethod.Post))
 {
     @Html.ValidationSummary(true)
 
