--- a/tests/Euclid.Sdk.TestComposite/Areas/Metadata/Views/Shared/_Layout.cshtml
+++ b/tests/Euclid.Sdk.TestComposite/Areas/Metadata/Views/Shared/_Layout.cshtml
@@ -3,11 +3,11 @@
 <html>
   <head>
     <title>@this.ViewBag.Title</title>
-    <link href="@this.Content("~/Areas/Metadata/Content/euclid-default-styles.css")" rel="stylesheet" type="text/css"/>
-    <script src="@this.Content("~/Areas/Metadata/Scripts/jquery-1.6.2.min.js")" type="text/javascript"> </script>
-    <script src="@this.Content("~/Areas/Metadata/Scripts/jquery.validate.js")" type="text/javascript"> </script>
-    <script src="@this.Content("~/Areas/Metadata/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"> </script>
-    <script src="@this.Content("~/Areas/Metadata/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"> </script>
+    <link href="@Url.Content("~/Areas/Metadata/Content/euclid-default-styles.css")" rel="stylesheet" type="text/css"/>
+    <script src="@Url.Content("~/Areas/Metadata/Scripts/jquery-1.6.2.min.js")" type="text/javascript"> </script>
+    <script src="@Url.Content("~/Areas/Metadata/Scripts/jquery.validate.js")" type="text/javascript"> </script>
+    <script src="@Url.Content("~/Areas/Metadata/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"> </script>
+    <script src="@Url.Content("~/Areas/Metadata/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"> </script>
   </head>
 
   <body>
