--- a/tests/Euclid.Sdk.TestComposite/Areas/Metadata/Views/Composite/Index.cshtml
+++ b/tests/Euclid.Sdk.TestComposite/Areas/Metadata/Views/Composite/Index.cshtml
@@ -3,33 +3,47 @@
            
 <h1>@ViewBag.Title</h1>
 
-<h2>Agents</h2>
-<ul>
-@foreach (var a in Model.Agents)
+@if (Model.Agents.Count() > 0)
 {
-    <li><a href="@Url.Action("ViewAgent", "Agents", new { AgentSystemName = a.SystemName })">@a.DescriptiveName</a></li>
+    <h2>Agents</h2>
+    <ul>
+    @foreach (var a in Model.Agents)
+    {
+        <li><a href="@Url.Action("ViewAgent", "Agents", new { AgentSystemName = a.SystemName })">@a.DescriptiveName</a></li>
+    }
+    </ul>
 }
-</ul>
-
-<h2>Input Models</h2>
-<ul>
-@foreach (var m in Model.InputModels)
+else
 {
-    <li>@m.Name</li>
+    <h2 style="color:red">No agents installed</h2>    
 }
-</ul>
 
+@if (Model.InputModels.Count() > 0)
+{
+    <h2>Input Models</h2>
+    <ul>
+    @foreach (var m in Model.InputModels)
+    {
+        <li>@m.Name</li>
+    }
+    </ul>
+}
+else
+{
+    <h2 style="color:red">No input models for composite</h2>
+}
 
 @if (Model.ConfigurationErrors.Count() > 0)
 {
     <h2>Errors</h2>
     <ul>
-    @foreach(var e in Model.ConfigurationErrors)
+    @foreach (var e in Model.ConfigurationErrors)
     {
         <li>@e</li>
     }
     </ul>
-} else
+}
+else
 {
     <h2>Configuration</h2>
     <ul>
