working on wiring up forum composite

--- a/apps/ForumComposite/Views/Shared/_Layout.cshtml
+++ b/apps/ForumComposite/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 		<div id="wrapper">
 			<div id="Head">
 				<div id="logo" class="sidebar-block">
-					<a href="#"><img src="../../Content/themes/swiss/images/logo.gif" alt="" /></a>
+					<a href="/"><img src="../../Content/themes/swiss/images/logo.gif" alt="" /></a>
 				</div>
 				<div id="menu" class="sidebar-block">
 					@RenderPage("LeftMenu.cshtml")
