--- a/apps/ForumComposite/Views/Shared/TopMenu.cshtml
+++ b/apps/ForumComposite/Views/Shared/TopMenu.cshtml
@@ -3,7 +3,7 @@
 		<li class="Active">@Html.ActionLink("All Discussions", "Thread")</li>
 		<li><a href="#mybookmarks" class="MyBookmarks">My Bookmarks<span>10</span></a></li> 
 		<li><a href="#mydiscussions" class="MyDiscussions">My Discussions<span>27</span></a></li> 
-		<li class="add-discussion"><a href="#new">Start a New Discussion</a></li> 
+		<li class="add-discussion">@Html.ActionLink("Start a new discussion", "Create", "Post")</li> 
 	</ul>
 	<!--
 		<div class="SubTab"><span class="FirstCrumb">↳ </span>Nested Category</div>
