created view for comment on post

--- a/apps/ForumComposite/Views/Post/Thread.cshtml
+++ b/apps/ForumComposite/Views/Post/Thread.cshtml
@@ -92,5 +92,5 @@
 </div>
 
 <div class="Foot">
-	<a href="#reply" class="TabLink SignInPopup">Add a Comment</a>
+	@Html.ActionLink("Add a Comment", "AddComment", null, new { @class = "TabLink SignInPopup"})
 </div>
