--- a/src/sdk/CompositeInspector/Views/Agents/ViewInputModelForCommand.cshtml
+++ b/src/sdk/CompositeInspector/Views/Agents/ViewInputModelForCommand.cshtml
@@ -12,7 +12,7 @@
         @Html.EditorFor(p => Model)
     </fieldset>
 
-    <input type="submit" value="Publish Command" />
+    <input type="submit" id="publish-command" value="Publish Command" />
 }
 
 @{
