--- a/apps/ForumComposite/Views/Post/Create.cshtml
+++ b/apps/ForumComposite/Views/Post/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@using ForumComposite.Models
+﻿@using Euclid.Composites.Mvc.Extensions
+@using ForumComposite.Models
 @model PublishPostInputModel
 
 @{
@@ -6,11 +7,8 @@
 }
 
 <h2>Start a New Discussion</h2>
-@using (Html.BeginForm())
+@using (Html.BeginFormForInputModel(Model))
 {
-    @Html.HiddenFor(m => m.AgentSystemName)
-    @Html.HiddenFor(m=>m.PartName)
-
         <div>
             @Html.LabelFor(m=>m.Title)
             @Html.TextBoxFor(m=>m.Title)
