cleaned up composite inspector
added method for composites to publish commands

--- a/src/sdk/CompositeInspector/Views/Agents/ViewAgent.cshtml
+++ b/src/sdk/CompositeInspector/Views/Agents/ViewAgent.cshtml
@@ -3,7 +3,7 @@
 
 <h2>@Model.DescriptiveName</h2>
 <dl>
-	<dt>@Model.AgentSytemName</dt>
+	<dt>@Model.AgentSystemName</dt>
 	<dd>@Model.Description</dd>
 </dl>
 
@@ -12,5 +12,3 @@
 	<li>@Html.DisplayFor(x => x.Queries, "IAgentPart", @Model.Queries)</li>
 	<li>@Html.DisplayFor(x => x.ReadModels, "IAgentPart", @Model.ReadModels)</li>
 </ul>
-
-@{ Html.RenderPartial("CompositeInspectorLinks", Model); }
