--- a/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
+++ b/src/sdk/CompositeInspector/Views/Shared/_Layout.cshtml
@@ -11,10 +11,16 @@
 
 			<div class="row show-grid">
 
-				<div class="span10 columns offset6">
-					Header
-				</div>
+				<div class="span5 columns">
+                    <h3>Composite Inspector</h3>
+                </div>
 
+                <div class="span5 columns">
+                    <h4>@ViewBag.CompositeName</h4>
+                    <p>@ViewBag.CompositeDescription</p>
+                </div>
+
+                <div class="span6 columns" id="alerts-area"></div>
 			</div>
 
 			<div>
@@ -22,11 +28,21 @@
 			</div>
 
 			<div class="row show-grid">
+				<div class="span4 columns">
+			        <a href="@Url.Action("Index", "Composite")" class="metadata-link">
+				        Composite details
+			        </a>
+                </div>
 
-				<div class="span10 columns">
-					Footer
+                <div class="span4 columns">
+                    <a class="metadata-link" href="@Url.Action("Index", "CommandRegistry")">
+				        Command registry
+			        </a>                
+                </div>
+
+                <div class="span8 columns">
+			        View publication record: <input type="text" id="publication-record-id" class="guid-input"/>
 				</div>
-
 			</div>
 
 		</div>
