--- a/src/sdk/CompositeInspector/Views/Shared/Scripts.cshtml
+++ b/src/sdk/CompositeInspector/Views/Shared/Scripts.cshtml
@@ -1,6 +1,25 @@
-﻿	<script src="@Url.Content("~/CompositeInspector/Scripts/jquery-1.6.2.min.js")" type="text/javascript"> </script>
+﻿<script src="@Url.Content("~/CompositeInspector/Scripts/jquery-1.6.2.min.js")" type="text/javascript"> </script>
 <script src="@Url.Content("~/CompositeInspector/Scripts/jquery-ui-1.8.14.min.js")" type="text/javascript"> </script>
 <script src="@Url.Content("~/CompositeInspector/Scripts/jquery-guid.js")" type="text/javascript"> </script>
 <script src="@Url.Content("~/CompositeInspector/Scripts/jquery.validate.js")" type="text/javascript"> </script>
 <script src="@Url.Content("~/CompositeInspector/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"> </script>
 <script src="@Url.Content("~/CompositeInspector/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"> </script>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+    	$("#publication-record-id").bind("keypress", function(e) {
+    	    var pubId = $("#publication-record-id").val().toUpperCase();
+    	    if (e.keyCode == 13 && pubId != "") {
+    	        if (!$.Guid.IsValid(pubId)) {
+    	            $("#publication-record-id").css("background-color", "red");
+    	        } else {
+    	            window.location.href = "@Url.Content("~/compositeinspector/commandregistry")/" + pubId;
+    	        }
+
+    	        return false;
+    	    }
+
+    	    $("#publication-record-id").css("background-color", "white");
+    	});
+    });
+</script>
